2001-10-17  Johan Dahlin  <zilch.am@home.se>

	* debian/.cvsignore: s/debian//.

	* src/bookshelf.c (bookshelf_add_directory): Fix so global books
	can be hidden.

2001-10-17  Johan Dahlin  <zilch.am@home.se>

	* debian/*: Added files for debian package.
	
	* devhelp.spec.in: Big update.

	* configure.in: Added a few *_REQUIRED and bumped another few.

	* src/devhelp-window.c (cmd_size_change_cb): Removed.
	(size_ui_listener): Added.
	(devhelp_window_new): Add 4 listeners.

	* ui/GNOME_DevHelp.ui: Updated to use radio style on font size.
	
2001-10-17  Richard Hult  <rhult@codefactory.se>

	* src/devhelp-search.c (devhelp_search_entry_key_press_cb): Better
	fix for the key navigation in the search entry.

2001-10-17  Mikael Hallendal  <micke@codefactory.se>

	* Makefile.am (EXTRA_DIST): added vim/devhelp.vim

	* configure.in: bumped version to 0.2.0.99

	* src/devhelp-controller.c:
	- fixes bug #195 in CFB.
	(devhelp_controller_open): call bookshelf_open_document.
	(cmd_back_cb): set back button unsensitive while processing.
	(cmd_forward_cb): set forward button unsensitive while processing.

	* src/book-index.c: 
	(book_index_new): unselect all, fixes bug #246 in CFB.
	
	- include gdk/gdkkeysyms.h
	- fixes bug #245 in CFB.
	(book_index_key_press_event): new function, impl.
	(book_index_get_scrolled): selection_mode = GTK_SELECTION_SINGLE.
	(book_index_class_init): override key_press_event.

2001-10-17  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added es and zh_TW to ALL_LINGUAS.

2001-10-16  Mikael Hallendal  <micke@codefactory.se>

	* src/book-index.c:
	(book_index_add_book): gtk_clist_sort, fixes bug #203 in CFB.
	(book_index_populate_tree): Call gtk_clist_sort just to make sure.

	* ui/devhelp.glade: 
	- removed mainapp, uses BonoboWindow now. Fixes bug #236 in
	  CF-bugzilla.
	- Changed Devhelp -> DevHelp, fixes #237 in CFB.

	* src/devhelp-controller.c:
	(impl_DevHelp_Controller_openURI): copy the CORBA_char *str_uri